# Lisa-Version-0.1

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  config.yaml  lisa_brain.py  main.py  mcp_servers.json  patch_submit.py  pyproject.toml  railway.toml  render.yaml  requirements.txt  start.cmd  start.sh  supervisor.py
brain/: __init__.py  core.py  parser.py  training.py
conductor/: __init__.py  autonomous.py  conductor.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONSTITUTION.md  CONTRIBUTING.md  EVOLUTION.md  GLOSSARY.md  SECURITY.md  SETUP.md  TROUBLESHOOTING.md  USAGE.md
evolution/: __init__.py  scheduler.py
interfaces/: __init__.py  dashboard.py  hub.py
lisa/: __init__.py  agent.py  api.py  channel_access.py  channels.py  conductor.py  config.py  constitutions.py  embeddings.py  events.py  evolution.py  evolution_engine.py  gating.py  hub.py  llm.py  local_inference.py  main.py  memory_system.py  notepad.py  personas.py  react_engine.py  router.py  sandbox.py  schemas.py  soft_prompts.py  tool_executor.py  tools.py
memory/: __init__.py  notepad.py
personal/: __init__.py  calendar.py  context_store.py  reminders.py  style_learner.py  wellness.py
safety/: __init__.py  admin_auth.py  input_sanitizer.py  replay_guard.py  session_auth.py  webhooks.py
scratch/: audit_security.py  find_telegram_ids.py  inspect_db.py  parse_logs.py  profile_memory.py  resolve_goal.py  run_and_poll.py  search_all_logs.py  search_explicit_requests.py  search_files.py  show_user_requests.py  telegram_bridge.py
tests/: conftest.py  test_api.py  (+17 more)
(+13 files in other folders)
