[project]
name = "lisa-agent"
version = "0.1.0"
description = "Bootstrap implementation of the LISA self-evolving developer agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116,<1.0",
    "aiohttp>=3.10,<4.0",
    "asyncpg>=0.30,<1.0",
    "beautifulsoup4>=4.12,<5.0",
    "aiofiles>=25.1,<26.0",
    "cachetools>=7.1,<8.0",
    "chromadb>=0.5,<1.0",
    "cryptography>=48.0,<49.0",
    "httpx>=0.28,<1.0",
    "llama-cpp-python>=0.3.28,<0.4",
    "docker>=7.1,<8.0",
    "PyYAML>=6.0,<7.0",
    "numpy>=2.1,<3.0",
    "pgvector>=0.3,<1.0",
    "pydantic-settings>=2.10,<3.0",
    "redis>=5.0,<6.0",
    "scikit-learn>=1.9,<2.0",
    "uvicorn[standard]>=0.35,<1.0",
    "psutil>=6.0,<7.0",
    "sentry-sdk>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "black>=24.0",
    "ruff>=0.3",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["lisa*", "brain*", "conductor*", "tools*", "memory*", "interfaces*", "evolution*", "utils*", "personal*", "safety*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
